[gd_scene load_steps=22 format=3 uid="uid://hcry7ck4q1q8"]

[ext_resource type="PackedScene" uid="uid://bieehfxk3a4ab" path="res://modules/rooms/room/room.tscn" id="1_5ywyc"]
[ext_resource type="TileSet" uid="uid://dj1l5fgk0wftn" path="res://assets/tilesets/test_action_tileset.tres" id="2_j6mkr"]
[ext_resource type="Script" path="res://modules/rooms/test_area_room_1/test_area_room_1.gd" id="2_vgapo"]
[ext_resource type="PackedScene" uid="uid://fy55thn23ao5" path="res://modules/player_spawn_point/player_spawn_point.tscn" id="3_vdbph"]
[ext_resource type="PackedScene" uid="uid://bmcdxiqvkovb" path="res://modules/characters/enemies/fast_enemy/fast_enemy.tscn" id="4_h0oaq"]
[ext_resource type="PackedScene" uid="uid://d18di0xuv174k" path="res://modules/characters/enemies/ranger/ranger.tscn" id="5_uqn8g"]
[ext_resource type="PackedScene" uid="uid://c8u56vxjpye0m" path="res://modules/characters/enemies/test_enemy/test_enemy.tscn" id="6_6owxe"]
[ext_resource type="PackedScene" uid="uid://dlppasf4dvwif" path="res://modules/camera_limiter/camera_limiter.tscn" id="7_h5ve0"]
[ext_resource type="PackedScene" uid="uid://cisv8heyvmvbb" path="res://modules/dungeon_room_door/dungeon_room_door.tscn" id="7_xkg5l"]
[ext_resource type="PackedScene" uid="uid://bgyfc7skye1bh" path="res://modules/combat_manager/combat_manager.tscn" id="9_smbvo"]
[ext_resource type="PackedScene" uid="uid://dcpfgoqoaghou" path="res://modules/invisible_wall/invisible_wall.tscn" id="10_lrq1m"]
[ext_resource type="PackedScene" uid="uid://drlx3u2mngfq0" path="res://modules/player_spawner/player_spawner.tscn" id="12_2tuqr"]
[ext_resource type="PackedScene" uid="uid://c8ua2uil50vnq" path="res://modules/enemy_spawner/enemy_spawner.tscn" id="12_72ssr"]
[ext_resource type="PackedScene" uid="uid://djt80b6b1c278" path="res://modules/dungeon_room_component/dungeon_room_component.tscn" id="14_2pgsw"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_wg3pt"]
vertices = PackedVector2Array(-240, -176, 128, -176, 128, 0, -96, 0, 304, 0, 304, 176, -96, 176, -240, 0)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(2, 4, 5, 6), PackedInt32Array(2, 6, 3), PackedInt32Array(0, 3, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-240, -176, -240, 0, -96, 0, -96, 176, 304, 176, 304, 0, 128, 0, 128, -176)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dojjk"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w0j6m"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_217xe"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ost6h"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h5ga"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_402m4"]
size = Vector2(32, 16)

[node name="TestAreaRoom1" instance=ExtResource("1_5ywyc")]
script = ExtResource("2_vgapo")

[node name="Map" parent="." index="0"]
tile_set = ExtResource("2_j6mkr")
layer_0/name = "Floor"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(393230, 65536, 5, 327694, 65536, 5, 262158, 65536, 5, 196622, 65536, 5, 131086, 65536, 5, 65550, 65536, 5, 14, 65536, 4, 393229, 65536, 5, 327693, 65536, 5, 262157, 65536, 5, 196621, 65536, 5, 131085, 65536, 5, 65549, 65536, 5, 13, 65536, 4, 393228, 65536, 5, 327692, 65536, 5, 262156, 65536, 5, 196620, 65536, 5, 131084, 65536, 5, 65548, 65536, 5, 12, 65536, 4, 393227, 65536, 5, 327691, 65536, 5, 262155, 65536, 5, 196619, 65536, 5, 131083, 65536, 5, 65547, 65536, 5, 11, 65536, 4, 393226, 65536, 5, 327690, 65536, 5, 262154, 65536, 5, 196618, 65536, 5, 131082, 65536, 5, 65546, 65536, 5, 10, 65536, 4, 393225, 65536, 5, 327689, 65536, 5, 262153, 65536, 5, 196617, 65536, 5, 131081, 65536, 5, 65545, 65536, 5, 9, 65536, 4, 393224, 65536, 5, 327688, 65536, 5, 262152, 65536, 5, 196616, 65536, 5, 131080, 65536, 5, 65544, 65536, 5, 8, 65536, 4, 393223, 65536, 5, 327687, 65536, 5, 262151, 65536, 5, 196615, 65536, 5, 131079, 65536, 5, 65543, 65536, 5, 7, 65536, 5, 393222, 65536, 5, 327686, 65536, 5, 262150, 65536, 5, 196614, 65536, 5, 131078, 65536, 5, 65542, 65536, 5, 6, 65536, 5, 393221, 65536, 5, 327685, 65536, 5, 262149, 65536, 5, 196613, 65536, 5, 131077, 65536, 5, 65541, 65536, 5, 5, 65536, 5, 393220, 65536, 5, 327684, 65536, 5, 262148, 65536, 5, 196612, 65536, 5, 131076, 65536, 5, 65540, 65536, 5, 4, 65536, 5, 393219, 65536, 5, 327683, 65536, 5, 262147, 65536, 5, 196611, 65536, 5, 131075, 65536, 5, 65539, 65536, 5, 3, 65536, 5, 393218, 65536, 5, 327682, 65536, 5, 262146, 65536, 5, 196610, 65536, 5, 131074, 65536, 5, 65538, 65536, 5, 2, 65536, 5, 393217, 65536, 5, 327681, 65536, 5, 262145, 65536, 5, 196609, 65536, 5, 131073, 65536, 5, 65537, 65536, 5, 1, 65536, 5, 393216, 65536, 5, 327680, 65536, 5, 262144, 65536, 5, 196608, 65536, 5, 131072, 65536, 5, 65536, 65536, 5, 0, 65536, 5, -65530, 65536, 5, -131066, 65536, 5, -196602, 65536, 5, -262138, 65536, 5, -327674, 65536, 5, -393210, 65536, 5, -458746, 65536, 5, -524282, 65536, 5, -65531, 65536, 5, -131067, 65536, 5, -196603, 65536, 5, -262139, 65536, 5, -327675, 65536, 5, -393211, 65536, 5, -458747, 65536, 5, -524283, 65536, 5, -65532, 65536, 5, -131068, 65536, 5, -196604, 65536, 5, -262140, 65536, 5, -327676, 65536, 5, -393212, 65536, 5, -458748, 65536, 5, -524284, 65536, 5, -65533, 65536, 5, -131069, 65536, 5, -196605, 65536, 5, -262141, 65536, 5, -327677, 65536, 5, -393213, 65536, 5, -458749, 65536, 5, -524285, 65536, 5, -65534, 65536, 5, -131070, 65536, 5, -196606, 65536, 5, -262142, 65536, 5, -327678, 65536, 5, -393214, 65536, 5, -458750, 65536, 5, -524286, 65536, 5, -65535, 65536, 5, -131071, 65536, 5, -196607, 65536, 5, -262143, 65536, 5, -327679, 65536, 5, -393215, 65536, 5, -458751, 65536, 5, -524287, 65536, 5, -65536, 65536, 5, -131072, 65536, 5, -196608, 65536, 5, -262144, 65536, 5, -327680, 65536, 5, -393216, 65536, 5, -458752, 65536, 5, -524288, 65536, 5, -1, 65536, 5, -65537, 65536, 5, -131073, 65536, 5, -196609, 65536, 5, -262145, 65536, 5, -327681, 65536, 5, -393217, 65536, 5, -458753, 65536, 5, -2, 65536, 5, -65538, 65536, 5, -131074, 65536, 5, -196610, 65536, 5, -262146, 65536, 5, -327682, 65536, 5, -393218, 65536, 5, -458754, 65536, 5, -3, 65536, 5, -65539, 65536, 5, -131075, 65536, 5, -196611, 65536, 5, -262147, 65536, 5, -327683, 65536, 5, -393219, 65536, 5, -458755, 65536, 5, -4, 65536, 5, -65540, 65536, 5, -131076, 65536, 5, -196612, 65536, 5, -262148, 65536, 5, -327684, 65536, 5, -393220, 65536, 5, -458756, 65536, 5, -5, 65536, 5, -65541, 65536, 5, -131077, 65536, 5, -196613, 65536, 5, -262149, 65536, 5, -327685, 65536, 5, -393221, 65536, 5, -458757, 65536, 5, -6, 65536, 5, -65542, 65536, 5, -131078, 65536, 5, -196614, 65536, 5, -262150, 65536, 5, -327686, 65536, 5, -393222, 65536, 5, -458758, 65536, 5, -7, 65536, 6, -65543, 65536, 5, -131079, 65536, 5, -196615, 65536, 5, -262151, 65536, 5, -327687, 65536, 5, -393223, 65536, 5, -458759, 65536, 5, -8, 65536, 5, -65544, 65536, 5, -131080, 65536, 5, -196616, 65536, 5, -262152, 65536, 5, -327688, 65536, 5, -393224, 65536, 5, -458760, 65536, 5, -9, 65536, 5, -65545, 65536, 5, -131081, 65536, 5, -196617, 65536, 5, -262153, 65536, 5, -327689, 65536, 5, -393225, 65536, 5, -458761, 65536, 5, 458751, 65536, 5, 393215, 65536, 5, 327679, 65536, 5, 262143, 65536, 5, 196607, 65536, 5, 131071, 65536, 5, 65535, 65536, 5, 458750, 65536, 5, 393214, 65536, 5, 327678, 65536, 5, 262142, 65536, 5, 196606, 65536, 5, 131070, 65536, 5, 65534, 65536, 5, 458749, 65536, 5, 393213, 65536, 5, 327677, 65536, 5, 262141, 65536, 5, 196605, 65536, 5, 131069, 65536, 5, 65533, 65536, 5, -589818, 65536, 5, -655354, 65536, 5, -720890, 65536, 4, -589819, 65536, 5, -655355, 65536, 5, -720891, 65536, 4, -589820, 65536, 5, -655356, 65536, 5, -720892, 65536, 4, -589821, 65536, 5, -655357, 65536, 5, -720893, 65536, 4, -589822, 65536, 5, -655358, 65536, 5, -720894, 65536, 4, -589823, 65536, 5, -655359, 65536, 5, -720895, 65536, 4, -589824, 65536, 5, -655360, 65536, 5, -720896, 65536, 4, -524289, 65536, 5, -589825, 65536, 5, -655361, 65536, 4, -524290, 65536, 5, -589826, 65536, 5, -655362, 65536, 4, -524291, 65536, 5, -589827, 65536, 5, -655363, 65536, 4, -524292, 65536, 5, -589828, 65536, 5, -655364, 65536, 4, -524293, 65536, 5, -589829, 65536, 5, -655365, 65536, 4, -524294, 65536, 5, -589830, 65536, 5, -655366, 65536, 4, -524295, 65536, 5, -589831, 65536, 5, -655367, 65536, 4, -524296, 65536, 5, -589832, 65536, 5, -655368, 65536, 4, -524297, 65536, 5, -589833, 65536, 5, -655369, 65536, 4, -10, 65536, 5, -65546, 65536, 5, -131082, 65536, 5, -196618, 65536, 5, -262154, 65536, 5, -327690, 65536, 5, -393226, 65536, 5, -458762, 65536, 5, -524298, 65536, 5, -589834, 65536, 5, -655370, 65536, 4, -11, 65536, 5, -65547, 65536, 5, -131083, 65536, 5, -196619, 65536, 5, -262155, 65536, 5, -327691, 65536, 5, -393227, 65536, 5, -458763, 65536, 5, -524299, 65536, 5, -589835, 65536, 5, -655371, 65536, 4, -12, 65536, 5, -65548, 65536, 5, -131084, 65536, 5, -196620, 65536, 5, -262156, 65536, 5, -327692, 65536, 5, -393228, 65536, 5, -458764, 65536, 5, -524300, 65536, 5, -589836, 65536, 5, -655372, 65536, 4, -13, 65536, 5, -65549, 65536, 5, -131085, 65536, 5, -196621, 65536, 5, -262157, 65536, 5, -327693, 65536, 5, -393229, 65536, 5, -458765, 65536, 5, -524301, 65536, 5, -589837, 65536, 5, -655373, 65536, 4, -14, 65536, 5, -65550, 65536, 5, -131086, 65536, 5, -196622, 65536, 5, -262158, 65536, 5, -327694, 65536, 5, -393230, 65536, 5, -458766, 65536, 5, -524302, 65536, 5, -589838, 65536, 5, -655374, 65536, 4, -15, 0, 5, -65551, 0, 5, -131087, 0, 5, -196623, 0, 5, -262159, 0, 5, -327695, 0, 5, -393231, 0, 5, -458767, 0, 5, -524303, 0, 5, -589839, 0, 5, -655375, 0, 4, 655378, 131072, 6, 589842, 131072, 5, 524306, 131072, 5, 458770, 131072, 5, 393234, 131072, 5, 262162, 131072, 5, 196626, 131072, 5, 131090, 131072, 5, 65554, 131072, 5, 18, 131072, 4, 655377, 65536, 6, 589841, 65536, 5, 524305, 65536, 5, 458769, 65536, 5, 393233, 65536, 5, 327697, 65536, 5, 262161, 65536, 5, 196625, 65536, 5, 131089, 65536, 5, 65553, 65536, 5, 17, 65536, 4, 655376, 65536, 6, 589840, 65536, 5, 524304, 65536, 5, 458768, 65536, 5, 393232, 65536, 5, 327696, 65536, 5, 262160, 65536, 5, 196624, 65536, 5, 131088, 65536, 5, 65552, 65536, 5, 16, 65536, 4, 655375, 65536, 6, 589839, 65536, 5, 524303, 65536, 5, 458767, 65536, 5, 393231, 65536, 5, 327695, 65536, 5, 262159, 65536, 5, 196623, 65536, 5, 131087, 65536, 5, 65551, 65536, 5, 15, 65536, 4, 655374, 65536, 6, 589838, 65536, 5, 524302, 65536, 5, 458766, 65536, 5, 655373, 65536, 6, 589837, 65536, 5, 524301, 65536, 5, 458765, 65536, 5, 655372, 65536, 5, 589836, 65536, 5, 524300, 65536, 5, 458764, 65536, 5, 655371, 65536, 5, 589835, 65536, 5, 524299, 65536, 5, 458763, 65536, 5, 655370, 65536, 6, 589834, 65536, 5, 524298, 65536, 5, 458762, 65536, 5, 655369, 65536, 6, 589833, 65536, 5, 524297, 65536, 5, 458761, 65536, 5, 655368, 65536, 6, 589832, 65536, 5, 524296, 65536, 5, 458760, 65536, 5, 655367, 65536, 6, 589831, 65536, 5, 524295, 65536, 5, 458759, 65536, 5, 655366, 65536, 6, 589830, 65536, 5, 524294, 65536, 5, 458758, 65536, 5, 655365, 65536, 6, 589829, 65536, 5, 524293, 65536, 5, 458757, 65536, 5, 655364, 65536, 6, 589828, 65536, 5, 524292, 65536, 5, 458756, 65536, 5, 655363, 65536, 6, 589827, 65536, 5, 524291, 65536, 5, 458755, 65536, 5, 655362, 65536, 6, 589826, 65536, 5, 524290, 65536, 5, 458754, 65536, 5, 655361, 65536, 6, 589825, 65536, 5, 524289, 65536, 5, 458753, 65536, 5, 655360, 65536, 6, 589824, 65536, 5, 524288, 65536, 5, 458752, 65536, 5, 720895, 65536, 6, 655359, 65536, 5, 589823, 65536, 5, 524287, 65536, 5, 720894, 65536, 6, 655358, 65536, 5, 589822, 65536, 5, 524286, 65536, 5, 720893, 65536, 6, 655357, 65536, 5, 589821, 65536, 5, 524285, 65536, 5, 720892, 65536, 6, 655356, 65536, 5, 589820, 65536, 5, 524284, 65536, 5, 458748, 65536, 5, 393212, 65536, 5, 327676, 65536, 5, 262140, 65536, 5, 196604, 65536, 5, 131068, 65536, 5, 65532, 65536, 5, 720891, 65536, 6, 655355, 65536, 5, 589819, 65536, 5, 524283, 65536, 5, 458747, 65536, 5, 393211, 65536, 5, 327675, 65536, 5, 262139, 65536, 5, 196603, 65536, 5, 131067, 65536, 5, 65531, 65536, 5, 720890, 0, 6, 655354, 0, 5, 589818, 0, 5, 524282, 0, 5, 458746, 0, 5, 393210, 0, 5, 327674, 0, 5, 262138, 0, 5, 196602, 0, 5, 131066, 0, 5, 65530, 0, 5, -65529, 131072, 5, -131065, 131072, 5, -196601, 131072, 5, -262137, 131072, 5, -327673, 131072, 5, -393209, 131072, 5, -458745, 131072, 5, -524281, 131072, 5, -589817, 131072, 5, -655353, 131072, 5, -720889, 131072, 4, 327699, 65536, 4, 393235, 131072, 4, -720901, 0, 6, -720900, 65536, 4, -786436, 0, 5, -851972, 0, 6, -851973, 65536, 6, -786437, 131072, 6, 786431, 0, 5, 851967, 65536, 6, 786432, 0, 6, 720896, 131072, 4, 327698, 131072, 5, 327701, 65536, 4, 262165, 131072, 4, 327700, 65536, 6, 262164, 65536, 5, 262163, 131072, 6, -917508, 65536, 4, -917509, 131072, 4)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-720911, 65536, 1, -720910, 65536, 1, -720909, 65536, 1, -720908, 65536, 1, -720907, 65536, 1, -720906, 65536, 1, -720905, 65536, 1, -720904, 65536, 1, -720903, 65536, 1, -720898, 65536, 1, -720897, 65536, 1, -786432, 65536, 1, -786431, 65536, 1, -786430, 65536, 1, -786429, 65536, 1, -786428, 65536, 1, -786427, 65536, 1, -786426, 65536, 1, -786425, 65536, 1, -983032, 131072, 0, -917496, 131072, 1, -851960, 131072, 1, -786424, 131072, 1, -720888, 131072, 1, -655352, 131072, 1, -589816, 131072, 1, -524280, 131072, 1, -458744, 131072, 1, -393208, 131072, 1, -327672, 131072, 1, -65528, 65536, 1, -262125, 131072, 0, -196589, 131072, 1, -131053, 131072, 1, -65517, 131072, 1, 458771, 131072, 1, 524307, 131072, 1, 589843, 131072, 1, 655379, 131072, 2, 655378, 0, 3, 655377, 0, 3, 655376, 0, 3, 655375, 0, 3, 655374, 0, 3, 655373, 0, 3, 655370, 0, 3, 655369, 0, 3, 655368, 0, 3, 655367, 0, 3, 655366, 0, 3, 655365, 0, 3, 655364, 0, 3, 655363, 0, 3, 655362, 0, 3, 655361, 0, 3, 720894, 0, 3, 720893, 0, 3, 720892, 0, 3, 720891, 0, 3, 720890, 0, 3, 720889, 0, 2, 655353, 0, 1, 589817, 0, 1, 524281, 0, 1, 458745, 0, 1, 393209, 0, 1, 327673, 0, 1, 262137, 0, 1, 196601, 0, 1, 131065, 0, 1, 65529, 0, 1, -8, 0, 3, -9, 0, 3, -10, 0, 3, -11, 0, 3, -12, 0, 3, -13, 0, 3, -14, 0, 3, -15, 0, 3, -7, 0, 3, -16, 0, 2, -65552, 0, 1, -131088, 0, 1, -196624, 0, 1, -262160, 0, 1, -327696, 0, 1, -393232, 0, 1, -458768, 0, 1, -524304, 0, 1, -589840, 0, 1, -655376, 0, 1, -720912, 0, 1, -786448, 0, 1, -851984, 0, 1, -917520, 0, 0, 655371, 0, 3, 655372, 0, 3, -720902, 65536, 1, -720899, 65536, 1, 786430, 0, 1, 720897, 131072, 1, 196627, 65536, 1, 196628, 65536, 1, 327700, 0, 3, 393235, 131072, 1, 327701, 0, 3, 196629, 65536, 1, 327699, 196608, 3, -65527, 65536, 1, -65526, 65536, 1, -65525, 65536, 1, -65524, 65536, 1, -65523, 65536, 1, -65522, 65536, 1, -65521, 65536, 1, -65520, 65536, 1, -65519, 65536, 1, -65518, 65536, 1, 21, 65536, 0, 20, 65536, 0, -262126, 65536, 0, -262127, 65536, 0, -262128, 65536, 0, -262129, 65536, 0, -262130, 65536, 0, -262131, 65536, 0, -262132, 65536, 0, -262133, 65536, 0, -262134, 65536, 0, -262135, 65536, 0, -983033, 65536, 0, -983034, 65536, 0, -983035, 65536, 0, -983036, 65536, 0, -983037, 65536, 0, -983038, 65536, 0, -983039, 65536, 0, -983040, 65536, 0, -917505, 65536, 0, -917506, 65536, 0, -917511, 65536, 0, -917512, 65536, 0, -917513, 65536, 0, -917514, 65536, 0, -917515, 65536, 0, -917516, 65536, 0, -917517, 65536, 0, -917518, 65536, 0, -917519, 65536, 0, 19, 196608, 1, -262136, 196608, 1, -917507, 196608, 1, -917510, 196608, 2, 851966, 0, 1, 786433, 131072, 1)
layer_2/name = "Collisions"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(720910, 131072, 3, 720911, 131072, 3, 720912, 131072, 3, 720913, 131072, 3, 720914, 131072, 3, 720915, 131072, 3, 720904, 131072, 3, 720903, 131072, 3, 720902, 131072, 3, 720901, 131072, 3, 720900, 131072, 3, 720899, 131072, 3, 720898, 131072, 3, 786429, 131072, 3, 786428, 131072, 3, 786427, 131072, 3, 786426, 131072, 3, 786425, 131072, 3, 65528, 131072, 3, 65527, 131072, 3, 65526, 131072, 3, 65525, 131072, 3, 65524, 131072, 3, 65523, 131072, 3, 65522, 131072, 3, 65521, 131072, 3, -131064, 131072, 3, -196600, 131072, 3, -262136, 131072, 3, 720905, 131072, 3, 720906, 131072, 3, 720907, 131072, 3, 720908, 131072, 3, 720909, 131072, 3, 65520, 131072, 3, 393236, 131072, 3, 393237, 131072, 3)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Map" index="1"]
navigation_polygon = SubResource("NavigationPolygon_wg3pt")

[node name="InvisibleWall" parent="Map" index="2" groups=["removable_walls"] instance=ExtResource("10_lrq1m")]
position = Vector2(-64, -184)

[node name="Collision" parent="Map/InvisibleWall" index="0"]
shape = SubResource("RectangleShape2D_dojjk")

[node name="InvisibleWall2" parent="Map" index="3" groups=["removable_walls"] instance=ExtResource("10_lrq1m")]
position = Vector2(312, 80)

[node name="Collision" parent="Map/InvisibleWall2" index="0"]
shape = SubResource("RectangleShape2D_w0j6m")

[node name="InvisibleWall3" parent="Map" index="4" groups=["removable_walls"] instance=ExtResource("10_lrq1m")]
position = Vector2(0, 184)

[node name="Collision" parent="Map/InvisibleWall3" index="0"]
shape = SubResource("RectangleShape2D_217xe")

[node name="EnemySpawnPoints" type="Node2D" parent="Map" index="5"]

[node name="Marker2D" type="Marker2D" parent="Map/EnemySpawnPoints" index="0"]
position = Vector2(128, 48)

[node name="Marker2D2" type="Marker2D" parent="Map/EnemySpawnPoints" index="1"]
position = Vector2(128, 128)

[node name="Marker2D3" type="Marker2D" parent="Map/EnemySpawnPoints" index="2"]
position = Vector2(16, 88)

[node name="Marker2D4" type="Marker2D" parent="Map/EnemySpawnPoints" index="3"]
position = Vector2(16, -88)

[node name="Marker2D5" type="Marker2D" parent="Map/EnemySpawnPoints" index="4"]
position = Vector2(-152, -96)

[node name="PlayerSpawnPoints" type="Node2D" parent="Map" index="6"]

[node name="PlayerSpawnPoint" parent="Map/PlayerSpawnPoints" index="0" instance=ExtResource("3_vdbph")]
position = Vector2(296, 80)
spawn_id = "from_left"

[node name="PlayerSpawnPoint2" parent="Map/PlayerSpawnPoints" index="1" instance=ExtResource("3_vdbph")]
position = Vector2(-64, -168)
spawn_id = "from_bottom"

[node name="PlayerSpawnPoint3" parent="Map/PlayerSpawnPoints" index="2" instance=ExtResource("3_vdbph")]
position = Vector2(0, 168)
spawn_id = "from_top"

[node name="ClearColor" type="ColorRect" parent="Map" index="7"]
z_index = -100
offset_left = -256.0
offset_top = -240.0
offset_right = 352.0
offset_bottom = 208.0
color = Color(0, 0, 0, 1)

[node name="CameraLimiter" parent="Map" index="8" instance=ExtResource("7_h5ve0")]

[node name="TopLeft" parent="Map/CameraLimiter" index="0"]
position = Vector2(-256, -240)

[node name="BottomRight" parent="Map/CameraLimiter" index="1"]
position = Vector2(352, 208)

[node name="TopDoor" parent="Map" index="9" instance=ExtResource("7_xkg5l")]
position = Vector2(-64, -200)
target_spawn = "from_top"

[node name="Collision" parent="Map/TopDoor/Area" index="0"]
shape = SubResource("RectangleShape2D_ost6h")

[node name="RightDoor" parent="Map" index="10" instance=ExtResource("7_xkg5l")]
position = Vector2(328, 80)
target_spawn = "from_right"

[node name="Collision" parent="Map/RightDoor/Area" index="0"]
shape = SubResource("RectangleShape2D_4h5ga")

[node name="BottomDoor" parent="Map" index="11" instance=ExtResource("7_xkg5l")]
position = Vector2(0, 200)
target_spawn = "from_bottom"

[node name="Collision" parent="Map/BottomDoor/Area" index="0"]
shape = SubResource("RectangleShape2D_402m4")

[node name="CombatManager" parent="." index="1" node_paths=PackedStringArray("enemy_spawner", "map") instance=ExtResource("9_smbvo")]
enemy_types = Array[PackedScene]([ExtResource("5_uqn8g"), ExtResource("4_h0oaq"), ExtResource("6_6owxe")])
enemy_spawner = NodePath("../EnemySpawner")
map = NodePath("../Map")

[node name="EnemySpawner" parent="." index="2" node_paths=PackedStringArray("map", "spawn_points_container") instance=ExtResource("12_72ssr")]
map = NodePath("../Map")
spawn_points_container = NodePath("../Map/EnemySpawnPoints")

[node name="PlayerSpawner" parent="." index="3" node_paths=PackedStringArray("spawn_points_container", "map") instance=ExtResource("12_2tuqr")]
spawn_points_container = NodePath("../Map/PlayerSpawnPoints")
map = NodePath("../Map")

[node name="DungeonRoomComponent" parent="." index="4" node_paths=PackedStringArray("top_door", "bottom_door", "right_door") instance=ExtResource("14_2pgsw")]
top_door = NodePath("../Map/TopDoor")
bottom_door = NodePath("../Map/BottomDoor")
right_door = NodePath("../Map/RightDoor")

[connection signal="action_created" from="CombatManager" to="." method="_on_combat_manager_action_created"]
[connection signal="combat_ended" from="CombatManager" to="." method="_on_combat_manager_combat_ended"]
[connection signal="simulation_player_created" from="CombatManager" to="." method="_on_combat_manager_simulation_player_created"]

[editable path="Map/InvisibleWall"]
[editable path="Map/InvisibleWall2"]
[editable path="Map/InvisibleWall3"]
[editable path="Map/CameraLimiter"]
[editable path="Map/TopDoor"]
[editable path="Map/RightDoor"]
[editable path="Map/BottomDoor"]
